--- a/HelloWorld/src/main/resources/templates/index.html
+++ b/HelloWorld/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 <h2>Hello World</h2>
 <h3>Jenkins, are you there? Yes, brother!</h3>
 Two hunters are out in the woods when one of them collapses. He doesn't seem to be breathing and his eyes are glazed. The other guy whips out his phone and calls the emergency services. He gasps, "My friend is dead! What can I do?" The operator says, "Calm down. I can help. First, let's make sure he's dead." There is a silence; then a gun shot is heard. Back on the phone, the guy says, "OK, now what
-Congratulations on teach of the year!
+Congratulations on teacher of the year!
+Also, Spaghetti Carbonara is the greatest food dish of all time, closely followed by pizza.
 </body>
 </html>
